# HafaGPT-API

./: .cursorrules  .env.example  .gitignore  AUTHENTICATION_STATUS.md  CLERK_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  EMBEDDINGS_GUIDE.md  README.md  alembic.ini  chamorro-chatbot-3.0.py  chamorro_rag.py  crawl_website.py  dev-network.sh  manage_rag_db.py  pyproject.toml  render.yaml  requirements.txt  start.sh  sync_metadata.py  test_system.py
.devcontainer/: README.md  devcontainer.json
alembic/: env.py
alembic/versions/: 0176a22a7e7e_add_message_feedback_table.py  16196b53d279_add_quiz_answers_table.py  3b48b7e385d6_add_quiz_results_table.py  49d9a91f7817_add_image_url_to_conversation_logs.py  572aa7e30b8a_add_file_urls_to_conversation_logs.py  6245b162db07_add_flashcard_progress_tables.py  8297443c236c_add_user_id_to_conversation_logs.py  a1b2c3d4e5f6_add_game_results_table.py  b2c3d4e5f6g7_add_user_daily_usage_table.py  ba903611d8fc_add_role_column_to_conversation_logs.py  h2i3j4k5l6m7_add_user_xp_tables.py  (+6 more)
api/: README.md  __init__.py  chamorro_morphology.py  chatbot_service.py  conversations.py  dictionary_service.py  main.py  models.py  story_service.py
crawlers/: README.md  SOURCES.md  _template.py  iknm_kam_dictionary.py  pacific_daily_news.py
data/: extracted_stories.json  pdn_urls.txt  supplemental_dictionary.json
docs/: CODEBASE_STRUCTURE.md  DATA_IMPORT_MASTER_PLAN.md  FLASHCARD_SOURCE_PRIORITIZATION.md  PRIORITY_AND_TRACKING_EXPLAINED.md  RAG_PRIORITY_SYSTEM.md  REORGANIZATION_COMPLETE.md  SOURCES.md  SOURCE_CITATION_SYSTEM.md
documentation/: BILLING_AND_SUBSCRIPTIONS.md  CHAMORRO_PRONUNCIATION_GUIDE.md  CHAMORRO_RESOURCES_RESEARCH.md  CODESPACES_QUICKSTART.md  EVALUATION_ROADMAP.md  GAMES_FEATURE.md  HOW_CRAWLING_AND_PROCESSING_WORKS.md  HOW_EVALUATION_WORKS.md  HOW_FILE_UPLOADS_WORK.md  HOW_RAG_WORKS.md  HOW_TTS_WORKS.md  IMPROVEMENT_GUIDE.md  LEARNINGCHAMORU_ANALYSIS.md  LEARNING_PATH_RESEARCH.md  MIGRATION_COMPLETE.md  MODEL_SWITCHING_GUIDE.md  RAG_MANAGEMENT_GUIDE.md  ROADMAP.md  SETUP_GUIDE.md  UPDATED_ROADMAP.md
evaluation/: .gitignore  BASELINE_METRICS.md  BIDIRECTIONAL_SEARCH_INVESTIGATION.md  CHAMORRO_TO_ENGLISH_FAILURE_ANALYSIS.md  DICTIONARY_AUDIT_RESULTS.md  EVALUATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  MODEL_COMPARISON_RESULTS.md  README.md  ROOT_CAUSE_ANALYSIS.md  ROOT_CAUSE_ANALYSIS_FINAL.md  SEMANTIC_SEARCH_INVESTIGATION.md  SYSTEMATIC_FAILURE_INVESTIGATION.md  TEST_REVIEW_USER_QUESTIONS.md  TEST_SUITE_V2_SUMMARY.md  WRONG_TRANSLATIONS_ANALYSIS.md  compare_models.py  context_test_results.json  eval_report_20251122_205144.txt  eval_report_20251122_213347.txt  eval_report_20251122_215008.txt  eval_report_20251122_221319.txt  eval_report_20251122_223859.txt  eval_report_20251122_224629.txt  eval_report_20251204_174030.txt  eval_report_20251204_175204.txt  eval_report_20251204_180305.txt  eval_report_20251204_181809.txt  eval_report_20251204_182807.txt  eval_report_20251204_184609.txt  eval_report_20251204_185519.txt  eval_results_20251122_205144.json  eval_results_20251122_213347.json  eval_results_20251122_215008.json  eval_results_20251122_221319.json  eval_results_20251122_223859.json  eval_results_20251122_224629.json  eval_results_20251204_174030.json  eval_results_20251204_175204.json  eval_results_20251204_180305.json  (+15 more)
scripts/: dev-network.sh  extract_stories.py  inspect_db.sh  start.sh
(+41 files in other folders)
