[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "crawl4ai>=0.7.6",
    "docling>=2.0.0",
    "fastapi>=0.115.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-postgres>=0.0.16",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "playwright>=1.55.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.3",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "sentence-transformers>=5.1.2",
    "transformers>=4.30.0",
    "uvicorn>=0.34.0",
]
